--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="nav-link"><h2><a href="about.html">About</a></h2></div>
+                <div class="nav-link"><h2 class="current-page"><a href="about.html">About</a></h2></div>
                 <div class="nav-link"><h2><a href="gallery.html">Gallery</a></h2></div>
             </div>
         </div>
@@ -103,11 +103,11 @@
         <div class="instagram-carousel">
           <div class="instagram-carousel-inner">
             <div class="instagram-carousel-items">
-              <div class="instagram-carousel-items-item">1</div>
-              <div class="instagram-carousel-items-item">2</div>
-              <div class="instagram-carousel-items-item">3</div>
-              <div class="instagram-carousel-items-item">4</div>
-              <div class="instagram-carousel-items-item">5</div>
+              <div class="instagram-carousel-items-item"></div>
+              <div class="instagram-carousel-items-item"></div>
+              <div class="instagram-carousel-items-item"></div>
+              <div class="instagram-carousel-items-item"></div>
+              <div class="instagram-carousel-items-item"></div>
             </div>
           </div>
           <div class="controls">
@@ -151,10 +151,10 @@
             <h1>Contact us</h1>
           </div>
           <div class="contact-div" >
-            <div class="footer-icon"><a href=""><img src="images/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
+            <div class="footer-icon"><a href=""><img src="images/footer/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
         </div>
           <div class="contact-div" >
-            <div class="footer-icon"><a href=""><img src="images/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
+            <div class="footer-icon"><a href=""><img src="images/footer/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
           </div>
         </div>
       </div>
@@ -164,9 +164,9 @@
             <h1>Social</h1>
           </div>
           <div class="social-icons">
-            <div class="footer-icon"><a href=""><img src="images/facebook-icon.png" alt="facebook-icon"></a></div>
-            <div class="footer-icon"><a href=""><img src="images/instagram-icon.png" alt="instagram-icon"></a></div>
-            <div class="footer-icon"><a href=""><img src="images/tiktok-icon.png" alt="tiktok-icon"></a></div>
+            <div class="footer-icon"><a href=""><img src="images/footer/facebook-icon.png" alt="facebook-icon"></a></div>
+            <div class="footer-icon"><a href=""><img src="images/footer/instagram-icon.png" alt="instagram-icon"></a></div>
+            <div class="footer-icon"><a href=""><img src="images/footer/tiktok-icon.png" alt="tiktok-icon"></a></div>
           </div>
         </div>
       </div>
