--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="collapsed-nav">
             <div class="nav-links">
-                <div class="nav-link"><h2><a href="index.html">Home</a></h2></div>
+                <div class="nav-link"><h2 class="current-page"><a href="index.html">Home</a></h2></div>
                 <div id="services-drop-down" class="nav-link">
                     <div class="services-nav-link">
                       <h2><a href="services.html">Services</a></h2>
@@ -102,10 +102,10 @@
               </div>
               <div class="heading-right">
                 <div class="heading-img-1">
-                  <img src="images/paint-tube.png" alt="">
+                  <img src="images/home/paint-tube.png" alt="">
                 </div>
                 <div class="heading-img-2">
-                  <img src="images/paintbrush.png" alt="">
+                  <img src="images/home/paintbrush.png" alt="">
                 </div>
               </div>
             </div>
@@ -120,7 +120,7 @@
         </div>
         <div class="love-items">
             <div class="love-item">
-                <div class="item-icon item-icon-1"><img src="images/stress-free-icon.png" alt="stress-free-icon"></div>
+                <div class="item-icon item-icon-1"><img src="images/home/stress-free-icon.png" alt="stress-free-icon"></div>
                 <div class="item-title"><h2>Stress relief</h2></div>
                 <div class="item-text">
                     <p>Painting can help the mind let go of unwanted burdens by allowing your mind to relax and focus on the canvas.</p>
@@ -329,10 +329,10 @@
               <h1>Contact us</h1>
             </div>
             <div class="contact-div" >
-              <div class="footer-icon"><a href=""><img src="images/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
+              <div class="footer-icon"><a href=""><img src="images/footer/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
           </div>
             <div class="contact-div" >
-              <div class="footer-icon"><a href=""><img src="images/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
+              <div class="footer-icon"><a href=""><img src="images/footer/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
             </div>
           </div>
         </div>
@@ -342,9 +342,9 @@
               <h1>Social</h1>
             </div>
             <div class="social-icons">
-              <div class="footer-icon"><a href=""><img src="images/facebook-icon.png" alt="facebook-icon"></a></div>
-              <div class="footer-icon"><a href=""><img src="images/instagram-icon.png" alt="instagram-icon"></a></div>
-              <div class="footer-icon"><a href=""><img src="images/tiktok-icon.png" alt="tiktok-icon"></a></div>
+              <div class="footer-icon"><a href=""><img src="images/footer/facebook-icon.png" alt="facebook-icon"></a></div>
+              <div class="footer-icon"><a href=""><img src="images/footer/instagram-icon.png" alt="instagram-icon"></a></div>
+              <div class="footer-icon"><a href=""><img src="images/footer/tiktok-icon.png" alt="tiktok-icon"></a></div>
             </div>
           </div>
         </div>
