--- a/gallery.html
+++ b/gallery.html
@@ -80,10 +80,41 @@
     <section class="gallery">
         <div class="gallery-grid">
             <div class="column">
-
+                <div class="column-item gallery-xl portrait"></div>
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-m"></div>
+                <div class="column-item gallery-xs image-xs"></div>
             </div>
-            <div class="column"></div>
-            <div class="column"></div>
+            <div class="column">
+                <div class="column-item gallery-l portrait"></div>
+                <div class="column-item gallery-s"></div>
+                <div class="column-item gallery-m"></div>
+                <div class="column-item gallery-s"></div>
+            </div>
+            <div class="column">
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-xl portrait"></div>
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-m"></div>
+            </div>
+            <div class="column">
+                <div class="column-item gallery-l portrait"></div>
+                <div class="column-item gallery-s"></div>
+                <div class="column-item gallery-m"></div>
+                <div class="column-item gallery-s"></div>
+            </div>
+            <div class="column">
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-l portrait"></div>
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-l portrait"></div>
+            </div>
+            <div class="column">
+                <div class="column-item gallery-xl portrait"></div>
+                <div class="column-item gallery-xs image-xs"></div>
+                <div class="column-item gallery-m"></div>
+                <div class="column-item gallery-xs image-xs"></div>
+            </div>
         </div>
     </section>
 
@@ -128,5 +159,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 </html>
