--- a/gallery.html
+++ b/gallery.html
@@ -79,41 +79,51 @@
 
     <section class="gallery">
         <div class="gallery-grid">
-            <div class="column">
-                <div class="column-item gallery-xl portrait"></div>
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-m"></div>
-                <div class="column-item gallery-xs image-xs"></div>
+            <div class="column">               
+                <img class="column-item gallery-xl" src="/images/gallery/gallery-img-portrait (1).jpg" alt="">                 
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (1).jpg" alt="">
+                <img class="column-item gallery-m" src="/images/gallery/gallery-img-m (1).jpg" alt="">                
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (2).jpg" alt="">
             </div>
-            <div class="column">
-                <div class="column-item gallery-l portrait"></div>
-                <div class="column-item gallery-s"></div>
-                <div class="column-item gallery-m"></div>
-                <div class="column-item gallery-s"></div>
+            <div class="column">              
+                <img class="column-item gallery-l" src="/images/gallery/gallery-img-portrait(2).jpg" alt="">
+                <img class="column-item gallery-s" src="/images/gallery/gallery-img-s (1).jpg" alt="">
+                <img class="column-item gallery-m" src="/images/gallery/gallery-img-m (2).jpg" alt="">
+                <img class="column-item gallery-s" src="/images/gallery/gallery-img-s (2).jpg" alt="">
             </div>
-            <div class="column">
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-xl portrait"></div>
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-m"></div>
+            <div class="column">           
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (3).jpg" alt="">           
+                <img class="column-item gallery-xl" src="/images/gallery/gallery-img-portrait (3).jpg" alt="">           
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (4).jpg" alt="">
+                <img class="column-item gallery-m" src="/images/gallery/gallery-img-m (3).jpg" alt="">
             </div>
-            <div class="column">
-                <div class="column-item gallery-l portrait"></div>
-                <div class="column-item gallery-s"></div>
-                <div class="column-item gallery-m"></div>
-                <div class="column-item gallery-s"></div>
+            <div class="column">          
+                <img class="column-item gallery-l" src="/images/gallery/gallery-img-portrait (4).jpg" alt="">
+                <img class="column-item gallery-s" src="/images/gallery/gallery-img-s (3).jpg" alt="">
+                <img class="column-item gallery-m" src="/images/gallery/gallery-img-m (4).jpg" alt="">
+                <img class="column-item gallery-s" src="/images/gallery/gallery-img-s (4).jpg" alt="">
             </div>
-            <div class="column">
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-l portrait"></div>
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-l portrait"></div>
+            <div class="column">          
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (5).jpg" alt="">            
+                <img class="column-item gallery-l" src="/images/gallery/gallery-img-portrait (5).jpg" alt="">           
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (6).jpg" alt="">          
+                <img class="column-item gallery-l" src="/images/gallery/gallery-img-portrait (6).jpg" alt="">
             </div>
-            <div class="column">
-                <div class="column-item gallery-xl portrait"></div>
-                <div class="column-item gallery-xs image-xs"></div>
-                <div class="column-item gallery-m"></div>
-                <div class="column-item gallery-xs image-xs"></div>
+            <div class="column">      
+                <img class="column-item gallery-xl" src="/images/gallery/gallery-img-portrait (7).jpg" alt="">      
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (7).jpg" alt="">
+                <img class="column-item gallery-m" src="/images/gallery/gallery-img-m (5).jpg" alt="">    
+                <img class="column-item gallery-xs" src="/images/gallery/gallery-img-xs (8).jpg" alt="">
+            </div>
+        </div>
+
+        <div class="modal">
+            <div class="modal-img">
+                <div class="modal-close-btn">
+                    <div class="modal-close-btn-div"></div>
+                    <div class="modal-close-btn-div"></div>
+                </div>
+                <img src="" alt="">       
             </div>
         </div>
     </section>
