--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,9 @@
     <div class="nav-wrap">
         <div class="navbar">
           <div class="logo">
-            <div class="nav-brand"></div>
+            <div class="nav-brand">
+                <img src="/images/navigation/paint-splatter.png" alt="">
+            </div>
             <h3>Paint Paradise</h3>
           </div>
             <div class="navbar-toggler">
