--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="nav-wrap">
         <div class="navbar">
           <div class="logo">
-            <div class="nav-brand"></div>
+            <div class="nav-brand">
+              <img src="/images/navigation/paint-splatter.png" alt="">
+            </div>
             <h3>Paint Paradise</h3>
           </div>
             <div class="navbar-toggler">
@@ -329,10 +331,10 @@
               <h1>Contact us</h1>
             </div>
             <div class="contact-div" >
-              <div class="footer-icon"><a href=""><img src="images/footer/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
+              <div class="footer-icon"><a href="Tel:6473909659"><img src="images/footer/phone-icon.png" alt="phone-icon"></a></div><p>(647) 390-9659</p>
           </div>
             <div class="contact-div" >
-              <div class="footer-icon"><a href=""><img src="images/footer/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
+              <div class="footer-icon"><a href="mailto:Paint.Paradise.Art@gmail.com"><img src="images/footer/email-icon.png" alt="email-icon"></a></div><p>Paint.paradise.art@gmail.com</p>
             </div>
           </div>
         </div>
@@ -342,9 +344,9 @@
               <h1>Social</h1>
             </div>
             <div class="social-icons">
-              <div class="footer-icon"><a href=""><img src="images/footer/facebook-icon.png" alt="facebook-icon"></a></div>
-              <div class="footer-icon"><a href=""><img src="images/footer/instagram-icon.png" alt="instagram-icon"></a></div>
-              <div class="footer-icon"><a href=""><img src="images/footer/tiktok-icon.png" alt="tiktok-icon"></a></div>
+              <div class="footer-icon"><a href="https://www.facebook.com/PaintParadiseArtStudio"><img src="images/footer/facebook-icon.png" alt="facebook-icon"></a></div>
+              <div class="footer-icon"><a href="https://www.instagram.com/paintparadise_/?hl=en"><img src="images/footer/instagram-icon.png" alt="instagram-icon"></a></div>
+              <div class="footer-icon"><a href="https://www.tiktok.com/@paintparadise?lang=en"><img src="images/footer/tiktok-icon.png" alt="tiktok-icon"></a></div>
             </div>
           </div>
         </div>
