fixed path to gallery images

--- a/about.html
+++ b/about.html
@@ -105,11 +105,21 @@
         <div class="instagram-carousel">
           <div class="instagram-carousel-inner">
             <div class="instagram-carousel-items">
-              <div class="instagram-carousel-items-item"></div>
-              <div class="instagram-carousel-items-item"></div>
-              <div class="instagram-carousel-items-item"></div>
-              <div class="instagram-carousel-items-item"></div>
-              <div class="instagram-carousel-items-item"></div>
+              <div class="instagram-carousel-items-item">
+                <img src="/images/about/instagram-carousel/insta-1.jpg" alt="">
+              </div>
+              <div class="instagram-carousel-items-item">
+                <img src="/images/about/instagram-carousel/insta-2.jpg" alt="">
+              </div>
+              <div class="instagram-carousel-items-item">
+                <img src="/images/about/instagram-carousel/insta-3.jpg" alt="">
+              </div>
+              <div class="instagram-carousel-items-item">
+                <img src="/images/about/instagram-carousel/insta-4.jpg" alt="">
+              </div>
+              <div class="instagram-carousel-items-item">
+                <img src="/images/about/instagram-carousel/insta-5.jpg" alt="">
+              </div>
             </div>
           </div>
           <div class="controls">
