started services page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <div class="nav-link"><h2><a href="index.html">Home</a></h2></div>
                 <div id="services-drop-down" class="nav-link">
                     <div class="services-nav-link">
-                        <h2><a href="">Services</a></h2>
+                        <h2><a href="services.html">Services</a></h2>
                         <div class="drop-down-arrow">
                           <div class="drop-down-arrow-1"></div>
                           <div class="drop-down-arrow-2"></div>
