--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <h1 class="purple-title">Where creativity <br/> comes to life</h1>
                 </div>
                 <div class="heading-text">
-                  <p>Paint Paradise is a safe place for anyone who needs a creative outlet or would like to explore their inner artist!</p>
+                  <h4>Paint Paradise is a safe place for anyone who needs a creative outlet or would like to explore their inner artist!</h4>
                 </div>
                 <div class="heading-button">
                   <button class="purple-button">BOOK YOUR EVENT</button>
